--- a/index.html
+++ b/index.html
@@ -274,6 +274,12 @@
         </div>
     </div>
         </main>
+        <div class="footer-sticky">
+            <div><h6>Preview of spotify</h6>
+            <p>Sign up to get unlimited songs and podcasts with occassional ads. No credit card needed.</p>
+            </div>
+            <button class="text-dark">Sign up free</button>
+        </div>
         
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
